@@ -8,7 +8,6 @@ CC = gcc
 LD = gcc
 
 EXECS = hxascdmp
-# EXECS = hxascdmp sg_chk_asc
 
 MAN_PGS = 
 MAN_PREF = man8
@@ -29,9 +28,6 @@ clean:
 
 hxascdmp: hxascdmp.o
 	$(LD) -o $@ $(LDFLAGS) $@.o
-
-sg_chk_asc: sg_chk_asc.o ../sg_lib.o
-	$(LD) -o $@ $(LDFLAGS) $@.o ../sg_lib.o
 
 
 install: $(EXECS)
