@@ -5,11 +5,8 @@ This directory contains these utilities:
     the Unix "od" command. By default, it decodes 16 bytes per line with
     an ASCII interpretation to the right of each line. See its
     hxascdmp(1) man page.
-  - sg_chk_asc: utility decodes the SCSI additional sense code table
-    found at http://www.t10.org/lists/asc-num.txt and checks it
-    against the table found in sg_lib_data.c in the lib/ subdirectory.
-    It is designed to keep the table in sg_lib_data.c in "sync" with the
-    table at the t10.org web site.
+  - sg_chk_asc and tst_sg_lib: are no longer here, they have been moved
+    to the 'testing' directory (a sibling of this directory).
 
 
 By default, the Makefile only builds the hxascdmp utility. The 'Makefile'
@@ -19,11 +16,5 @@ builds for FreeBSD (e.g. 'make -f Makefile.freebsd'); the
 in the Windows MinGW environment (e.g.  msys shell); and 'Makefile.cygwin'
 builds in the Windows Cygwin environment.
 
-To build sg_chk_asc the sg_lib.o and sg_lib_data.o files must be present
-(i.e. compiled) in the lib/ subdirectory. One way to meet that requirement
-is to execute './configure' in the main directory then 'cd lib ; make '.
-Then return to this directory and do 'make sg_chk_asc'.
-
-
 Douglas Gilbert
-30th March 2010 
+4th November 2017 
